--- a/TODO
+++ b/TODO
@@ -8,7 +8,6 @@ TO-DO
 
 2. Goals , core value , skills weightage validation in create and update 
 6. Hod comment after end year 
-7. Dark theme 
 8. Rjection stage 0 , 1 and 3
 9. Dynamic naming save in company settings 
 10. Company login logo and dashboard logo
@@ -23,7 +22,7 @@ TO-DO
 20. Notifications (employee)
 21. Logs Company , manager and hod 
 22. Email sending 
-23. Employee profile picture and display all  user details in home page 
+23. Employee profile picture 
 24. Chat component in goal , for employee and manager  
 
 
